// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`postgresServer: insert destinationSync 1`] = `
{
  "house": [
    {
      "id": 112,
      "name": "White",
    },
  ],
}
`;

exports[`postgresServer: insert infer table schema 1`] = `
[
  "CREATE TABLE IF NOT EXISTS "house" (
	"id" integer,
	"name" text
);
",
]
`;

exports[`postgresServer: insert multiple destinationSync 1`] = `
{
  "account": [
    {
      "id": 555,
      "name": "Bank",
    },
    {
      "id": 555,
      "name": null,
    },
  ],
}
`;

exports[`postgresServer: insert multiple infer table schema 1`] = `
[
  "CREATE TABLE IF NOT EXISTS "account" (
	"id" integer,
	"name" text
);
",
  "CREATE TABLE IF NOT EXISTS "account" (
	"id" integer
);
",
]
`;

exports[`postgresServer: mixed destinationSync 1`] = `
{
  "good": [
    {
      "id": 5,
      "name": "B",
    },
  ],
  "life": [
    {
      "code": "C",
      "id": 1,
    },
  ],
}
`;

exports[`postgresServer: mixed infer table schema 1`] = `
[
  "CREATE TABLE IF NOT EXISTS "good" (
	"id" integer,
	"name" text
);
",
  "CREATE UNIQUE INDEX IF NOT EXISTS "good_upsert_keys" ON "good" USING btree ("id");",
  "CREATE TABLE IF NOT EXISTS "life" (
	"id" integer,
	"code" text
);
",
  "CREATE UNIQUE INDEX IF NOT EXISTS "life_upsert_keys" ON "life" USING btree ("id");",
]
`;

exports[`postgresServer: upsert composite keys destinationSync 1`] = `
{
  "transaction": [
    {
      "amount": 1.23,
      "array_value": [
        {
          "key": "value",
        },
      ],
      "id": "1",
      "intId": 2,
      "is_deleted": false,
      "null_value": null,
      "raw": {
        "key": "value",
      },
      "undefined_value": null,
    },
  ],
}
`;

exports[`postgresServer: upsert composite keys infer table schema 1`] = `
[
  "CREATE TABLE IF NOT EXISTS "transaction" (
	"id" text,
	"intId" integer,
	"amount" double precision,
	"is_deleted" boolean,
	"raw" jsonb,
	"array_value" jsonb,
	"null_value" jsonb,
	"undefined_value" jsonb
);
",
  "CREATE UNIQUE INDEX IF NOT EXISTS "transaction_upsert_keys" ON "transaction" USING btree ("id","is_deleted");",
]
`;

exports[`postgresServer: upsert single key destinationSync 1`] = `
{
  "tre": [
    {
      "id": 5,
      "name": "B",
    },
  ],
}
`;

exports[`postgresServer: upsert single key infer table schema 1`] = `
[
  "CREATE TABLE IF NOT EXISTS "tre" (
	"id" integer,
	"name" text
);
",
  "CREATE UNIQUE INDEX IF NOT EXISTS "tre_upsert_keys" ON "tre" USING btree ("id");",
]
`;
